# Fast-Track-Telecom

./: CMakeLists.txt  README.md
Bitwise-Operations/: CMakeLists.txt  main.cpp
Client-Server/: CMakeLists.txt  Registration.asn1  build.sh  client_coder.cpp  server-decoder.cpp  server_decoder.cpp
Client-Server-TCP/: CMakeLists.txt
Client-Server-TCP/Client/: CMakeLists.txt  client.cpp
Client-Server-TCP/Server/: server.cpp
Client-Server/Client/: client.cpp
Client-Server/Server/: CMakeLists.txt  server.cpp
Client-Server/src/: Makefile.am.libasncodec  Registration.c  Registration.h
Database-Task/: CMakeLists.txt  main.cpp
Forward-List/: .gitignore  CMakeLists.txt  dummy.cpp  forward_list.hpp  forward_list.inl  iterator.hpp  main.cpp  my_forward_list.hpp  my_forward_list.inl
Multithreading/: CMakeLists.txt  main.cpp
Pointer-Arithmetic/: CMakeLists.txt  main.cpp
Tokenize/: CMakeLists.txt  main.cpp  parsers.hpp  tokens.hpp
